test/arrays/compilerErrors/array-delete.chpl

var A: [1..3] int;
delete A;
