test/arrays/compilerErrors/array-delete.good
array-delete.chpl:3: error: 'delete' is not allowed on non-class type [domain(1,int(64),false)] int(64)
